--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "0.2.0",
     "lucide-react": "^0.372.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
