--- a/package.json
+++ b/package.json
@@ -13,24 +13,55 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toolbar": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.17.3",
+    "@udecode/cn": "^33.0.0",
+    "@udecode/plate-autoformat": "^34.0.0",
+    "@udecode/plate-basic-marks": "^34.0.0",
+    "@udecode/plate-block-quote": "^34.0.0",
+    "@udecode/plate-break": "^34.0.0",
+    "@udecode/plate-caption": "^34.1.0",
+    "@udecode/plate-floating": "^34.0.6",
+    "@udecode/plate-heading": "^34.0.7",
+    "@udecode/plate-highlight": "^34.0.0",
+    "@udecode/plate-horizontal-rule": "^34.0.0",
+    "@udecode/plate-indent": "^34.0.0",
+    "@udecode/plate-indent-list": "^34.0.0",
+    "@udecode/plate-kbd": "^34.0.0",
+    "@udecode/plate-layout": "^34.0.0",
+    "@udecode/plate-line-height": "^34.0.0",
+    "@udecode/plate-link": "^34.0.6",
+    "@udecode/plate-list": "^34.0.0",
+    "@udecode/plate-node-id": "^34.0.0",
+    "@udecode/plate-paragraph": "^34.0.0",
+    "@udecode/plate-reset-node": "^34.0.0",
+    "@udecode/plate-resizable": "^34.0.0",
+    "@udecode/plate-select": "^34.0.0",
+    "@udecode/plate-selection": "^34.1.0",
+    "@udecode/plate-serializer-csv": "^34.0.0",
+    "@udecode/plate-serializer-docx": "^34.1.0",
+    "@udecode/plate-serializer-md": "^34.0.0",
+    "@udecode/plate-tabbable": "^34.0.0",
+    "@udecode/plate-table": "^34.0.0",
+    "@udecode/plate-toggle": "^34.0.0",
+    "@udecode/plate-trailing-block": "^34.0.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "0.2.0",
+    "cmdk": "^0.2.0",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.5",
     "lucide-react": "^0.372.0",
