--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-tooltip": "1.0.7",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.17.3",
@@ -72,6 +72,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-youtube": "^10.1.0",
     "relative-time": "^1.0.0",
     "simple-statistics": "^7.8.3",
     "tailwind-merge": "^2.3.0",
