--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@udecode/plate-table": "^34.0.0",
     "@udecode/plate-toggle": "^34.0.0",
     "@udecode/plate-trailing-block": "^34.0.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -85,6 +86,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazyload": "^3.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "openapi-typescript": "^6.7.6",
