--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-tooltip": "1.0.7",
     "@tanstack/match-sorter-utils": "^8.15.1",
