--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "recharts": "^2.12.7",
     "relative-time": "^1.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
